--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "recoil": "^0.7.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.0.23"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +49,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "prettier": "2.6.1",
-    "tailwindcss": "^3.0.23"
+    "prettier": "2.6.1"
   }
 }
